--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "enzyme": "^2.8.2",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
     "tahini": "^1.3.6"
   },
