--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-addons-test-utils": "^15.6.0",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
+    "react-icons": "^2.2.5",
     "tahini": "^1.3.6"
   },
   "devDependencies": {
